--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,13 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+
+}
+
+.body {
+    min-height: 100vh;
+    width: 100vw;
+
 }
 
 /*------------------- start css styles for header------------ */
@@ -98,7 +105,7 @@
 }
 
 .section {
-    padding: 3% 8% 4% 6%;
+    padding: 2% 8% 1% 6%;
     text-align: left;
     display: block;
     flex-direction: column;
@@ -128,7 +135,9 @@
 }
 
 @media(min-width: 500px) {
-
+    .section {
+        padding: 2% 1%;
+    }
 
     .main-container {
         display: flex;
@@ -157,18 +166,18 @@
     .aside {
         display: flex;
         flex-direction: column;
-        width: 50%;
-        height: 100VH;
+        min-width: 20%;
+        height: 85vh;
         background-color: green;
         justify-content: center;
-        margin: auto 3%;
+        margin: auto 4%;
         align-items: center;
         justify-content: flex-start;
     }
 
     .aside_container {
-        width: 170px;
-        height: 120px;
+        min-width: 70%;
+        min-height: 20%;
         margin: 10% 2% 0 2%;
         background-color: var(--principal-color);
     }
@@ -184,23 +193,7 @@
         border-left: 64px solid var(--line);
     }
 
-    .aside {
-        display: flex;
-        flex-direction: column;
-        width: 30%;
-        height: 100vh;
-        padding: 2%;
-        background-color: green;
-        justify-content: center;
-        margin: auto 5%;
-    }
 
-    .aside_container {
-        width: 165px;
-        height: 120px;
-        margin: 5% 2% 0 2%;
-        background-color: var(--principal-color);
-    }
 }
 
 /*----------------finish css style for main sections----------*/
