--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@
     --nav-redes: #874000;
     --oscuro: #212121;
     --hover: #fa8072;
-    --line: #d3d3d3;
+    --line: #E6E6E6;
 
 }
 
@@ -19,6 +19,7 @@
 .body {
     min-height: 100vh;
     width: 100vw;
+
 
 }
 
@@ -72,6 +73,11 @@
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
 
+}
+
+.principal-nav_item:nth-child(3):hover a {
+    background-color: var(--hover);
+    padding: 0.5rem;
 }
 
 /*mediaqueris for header */
@@ -137,6 +143,8 @@
 @media(min-width: 500px) {
     .section {
         padding: 2% 1%;
+        margin-left: 5%;
+        width: 70%;
     }
 
     .main-container {
@@ -154,11 +162,11 @@
 
     .section__text {
         font-size: 16px;
-        padding-right: 3%;
+
     }
 
     .section__text__midle {
-        width: 95%;
+        width: 90%;
         font-size: 16px;
         padding-left: 3%;
     }
@@ -170,9 +178,10 @@
         height: 85vh;
         background-color: green;
         justify-content: center;
-        margin: auto 4%;
+        margin-right: 4%;
         align-items: center;
         justify-content: flex-start;
+
     }
 
     .aside_container {
@@ -225,6 +234,11 @@
     text-decoration: none;
 }
 
+.second-nav_link:hover {
+    background-color: var(--hover);
+    padding: 0.5rem;
+}
+
 .third-nav_ul {
     display: flex;
     background-color: var(--nav-redes);
@@ -244,13 +258,15 @@
     height: 30px;
     font-size: 1.125rem;
     margin: 1rem 0;
-
 }
+
+
 
 @media(min-width: 1024px) {
     .footer {
         display: flex;
         justify-content: space-around;
+
     }
 
     .second-nav_ul {
